crates/toml_edit/tests/snapshots/invalid/key/bare-invalid-character-01.stderr
TOML parse error at line 1, column 1
  |
1 | ! = 123
  | ^
invalid unquoted key, expected letters, numbers, `-`, `_`
